--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -84,6 +84,7 @@
       display: flex
       align-items: center
     &__text
+      z-index: 99
       max-width: 537px
       margin: auto
       font-size: 12px
